update rust deps and fix line breaks in long texts

--- a/frontend/src/styles/messages.less
+++ b/frontend/src/styles/messages.less
@@ -150,6 +150,9 @@
 
       .message-quote-text {
         font-size: 13px;
+        overflow-wrap: anywhere;
+        white-space: pre-wrap;
+        line-break: anyhwere;
       }
     }
     
@@ -182,6 +185,7 @@
           color: #0c1d3b;
           overflow-wrap: anywhere;
           white-space: pre-wrap;
+          line-break: anyhwere;
 
           a {
             display: inline;
